# qrgenplasmoid

./: .gitignore  CMakeLists.txt  README
cmake_modules/: FindQREncode.cmake
doc/: CHANGES  TODO
src/: CMakeLists.txt  QRGenPlasmoid.cpp  QRGenPlasmoid.h  plasma-applet-qrgen.desktop  plasma_applet_qrgen.desktop
src/config/: Config.h
src/encoder/: CMakeLists.txt  QREncoder.cpp  QREncoder.h
src/ui/: CMakeLists.txt  QRCodeWidget.cpp  QRCodeWidget.h  QRGenConfigDialog.cpp  QRGenConfigDialog.h
